load html from url

--- a/tribalwars_scripts/annoy-o-tron/form.html
+++ b/tribalwars_scripts/annoy-o-tron/form.html
@@ -1,6 +1,6 @@
 <table class="vis">
     <tr>
-        <th>Annoy-o-Tron</th>
+        <th colspan="2">Annoy-o-Tron</th>
     </tr>
     <td>
         <img src="https://gamepedia.cursecdn.com/hearthstone_gamepedia/thumb/b/b2/Annoyotron_full.jpg/400px-Annoyotron_full.jpg?version=7724bf667f441932bc609f49473f0377">
