--- a/tribalwars_scripts/annoy-o-tron/form.html
+++ b/tribalwars_scripts/annoy-o-tron/form.html
@@ -5,8 +5,12 @@
     <td>
         <img src="https://gamepedia.cursecdn.com/hearthstone_gamepedia/thumb/b/b2/Annoyotron_full.jpg/400px-Annoyotron_full.jpg?version=7724bf667f441932bc609f49473f0377">
     </td>
-    <td>
-        <div><i>Skript pošle všechny jednotky ve vesnici, a po chvilce útok zruší. Takto pokračuje v náhodných intervalech dokud nezavřeš tuhle kartu.</i></div>
+    <td id="annoy-content">
+        <div><i>
+            Skript pošle všechny jednotky z vesnice kterou máš teď aktivní, a po chvilce útok zruší.
+            Takto pokračuje v náhodných intervalech dokud nezavřeš tuhle kartu.
+            <b>Z této vesnice nesmí jít žádný jiný příkaz!</b>
+        </i></div>
         <br>
         <table>
             <tr>
