--- a/tribalwars_scripts/annoy-o-tron/form.html
+++ b/tribalwars_scripts/annoy-o-tron/form.html
@@ -34,7 +34,7 @@
                 <td><input type="number" name="cancel-timeout" id="input-cancel-timeout" value="3"></td>
             </tr>
         </table>
-        <div id="error-message" style="color: red; visibility: hidden;"></div>
+        <div id="error-message" style="color: red; display: none;"></div>
         <div><button id="btn-confirm" class="btn">Potvrdit</button></div>
     </td>
 </table>
