scavenger UI improvements

--- a/tribalwars_scripts/scavenger/form.html
+++ b/tribalwars_scripts/scavenger/form.html
@@ -1,28 +1,40 @@
 <div id="vueapp">
-    <div>
-        <div>
-            <b>Interval:</b>
-            <input type="number" v-model.number="interval" :disabled="active">
-            minutes
-        </div>
-        <div>
-            <button @click="start" class="btn">Activate</button>
-        </div>
+    <div class="vis" style="width: fit-content;">
+        <h4>AutoScavenger by Darxeal</h4>
+        <table>
+            <tr>
+                <td>
+                    <b>Interval:</b>
+                    <input type="number" v-model.number="interval" :disabled="active">
+                    minut
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button @click="start" class="btn" :disabled="active">Spustit</button>
+                </td>
+            </tr>
+        </table>
     </div>
-    <table>
+    <table class="vis">
         <tr>
-            <th colspan="42">Sent squads</th>
+            <th>Poslané vojsko</th>
+            <th>Kategorie</th>
+            <th>Čas</th>
         </tr>
         <tr v-for="squad in sentSquads">
             <td>
-                {{ squad.option_id }}
-            </td>
-            <td>
                 <span v-for="unit in units" v-if="squad.candidate_squad.unit_counts[unit] > 0">
-                    <img :src="image_src('unit/unit_' + unit + '.png')" alt="unit">
                     {{ squad.candidate_squad.unit_counts[unit] }}
+                    <img :src="image_src('unit/unit_' + unit + '.png')" alt="unit">
                 </span>
             </td>
+            <td>
+                {{ squad.option_id }}
+            </td>            
+            <td>
+                {{ squad.time }}
+            </td>            
         </tr>
     </table>
 </div>
